--- a/pipi_where/WebContent/WEB-INF/web.xml
+++ b/pipi_where/WebContent/WEB-INF/web.xml
@@ -4,8 +4,17 @@
   
   <context-param>
     <param-name>/login.do</param-name>
-    <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller</param-value>
+    <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.LoginAction</param-value>
   </context-param>
+
+  <servlet>
+    <servlet-name>login</servlet-name>
+    <jsp-file>/login.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
   
   <servlet>
     <servlet-name>map_search</servlet-name>
