--- a/pipi_where/WebContent/WEB-INF/web.xml
+++ b/pipi_where/WebContent/WEB-INF/web.xml
@@ -34,6 +34,7 @@
     <servlet-name>map_search</servlet-name>
     <url-pattern>/map_search</url-pattern>
   </servlet-mapping>
+  
     <servlet>
     <servlet-name>card_list</servlet-name>
     <jsp-file>/card_list.jsp</jsp-file>
@@ -42,4 +43,14 @@
     <servlet-name>card_list</servlet-name>
     <url-pattern>/card_list</url-pattern>
   </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>map_result</servlet-name>
+    <jsp-file>/map_result.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>map_result</servlet-name>
+    <url-pattern>/map_result</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
