--- a/pipi_where/WebContent/WEB-INF/web.xml
+++ b/pipi_where/WebContent/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>pipi_where</display-name>
+  
   <context-param>
     <param-name>/login.do</param-name>
     <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.LoginAction</param-value>
@@ -13,6 +14,11 @@
     <param-name>/search.do</param-name>
     <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.SearchAction</param-value>
   </context-param>
+    <context-param>
+    <param-name>/sign-up.do</param-name>
+    <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.SignUpAction</param-value>
+  </context-param>
+  
   <servlet>
     <servlet-name>top</servlet-name>
     <jsp-file>/top.jsp</jsp-file>
@@ -53,4 +59,13 @@
     <servlet-name>map_result</servlet-name>
     <url-pattern>/map_result</url-pattern>
   </servlet-mapping>
+    <servlet>
+    <servlet-name>sign-up</servlet-name>
+    <jsp-file>/sign-up.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>sign-up</servlet-name>
+    <url-pattern>/sign-up</url-pattern>
+  </servlet-mapping>
+
 </web-app>
