--- a/pipi_where/WebContent/WEB-INF/web.xml
+++ b/pipi_where/WebContent/WEB-INF/web.xml
@@ -22,6 +22,10 @@
     <param-name>/sign-up.do</param-name>
     <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.SignUpAction</param-value>
   </context-param>
+  	<context-param>
+    <param-name>/register.do</param-name>
+    <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.RegisterCardAction</param-value>
+  </context-param>
   <servlet>
     <servlet-name>top</servlet-name>
     <jsp-file>/top.jsp</jsp-file>
