--- a/pipi_where/WebContent/WEB-INF/web.xml
+++ b/pipi_where/WebContent/WEB-INF/web.xml
@@ -26,6 +26,10 @@
     <param-name>/register.do</param-name>
     <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.RegisterCardAction</param-value>
   </context-param>
+  <context-param>
+    <param-name>/delete.do</param-name>
+    <param-value>jp.co.comnic.lesson.osunegi.pipi_where.controller.DeleteCardAction</param-value>
+  </context-param>
   <servlet>
     <servlet-name>top</servlet-name>
     <jsp-file>/top.jsp</jsp-file>
